--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -175,6 +175,7 @@ ol:not(.footnotes>ol) {
 
 strong {
     font-weight: 700;
+    color: #fff;
 }
 
 .content-list {
@@ -219,10 +220,25 @@ footer nav a {
     font-weight: 700;
 }
 
-code {
+code, pre {
     font-family: JetBrainsMono, "Roboto Mono", menlo, monospace;
     color: var(--code-color);
     background-color: var(--secondary-background-color);
+}
+
+pre {
+    width: 100%;
+    overflow: visible;
+    padding: .33rem;
+    font-size: .9rem;
+}
+
+pre::-webkit-scrollbar {
+    background-color: #3a3a3a;
+}
+
+pre::-webkit-scrollbar-thumb {
+    background-color: #555;
 }
 
 sup {
@@ -239,7 +255,6 @@ sup {
 }
 
 .blockquote {
-
     width: fit-content;
     margin-left: var(--standard-margin);
     margin-right: 1rem;
@@ -251,6 +266,10 @@ blockquote {
 
 figcaption:not(img + figcaption) {
     text-align: right;
+}
+
+figcaption:not(img + figcaption):before {
+    content:"\2014"
 }
 
 @media screen and (min-device-width: 801px) {
