Update border style for code blocks

--- a/output/assets/css/style.css
+++ b/output/assets/css/style.css
@@ -231,8 +231,9 @@ code, pre, pre * {
 
 pre {
     width: 100%;
-    overflow: visible;
-    font-size: .9rem;
+    border: var(--standard-border);
+    /*overflow: visible;*/
+    /*font-size: .9rem;*/
 }
 
 /*pre::-webkit-scrollbar {*/
