--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,7 @@
 :root {
 
     /* Hard set to use for subsequent rem sizing. */
-    font-size: 22px;
+    font-size: 24px;
     min-height: 100vh;
 
 
@@ -88,7 +88,7 @@ figure {
 
 figcaption {
     text-align: center;
-    font-size: 1.5rem;
+    font-size: var(--small-text);
 }
 
 figure img {
@@ -102,13 +102,13 @@ figure img {
 
 body {
     background-color: var(--primary-background-color);
-    width: 95%;
+    width: 92.5%;
     min-height: 90vh;
     margin-right: auto;
     margin-left: auto;
     margin-top: var(--standard-margin);
     margin-bottom: var(--standard-margin);
-    font-size: 2rem;
+    font-size: 2.25rem;
 
     /* Flex items: header, main, footer. */
     display: flex;
@@ -138,7 +138,7 @@ li {
 
 li:not(nav menu li, .content-list li)::marker {
     /* content: '- '; */
-    font-size: 1em;
+    font-size: var(--small-text);
 }
 
 header nav {
@@ -160,7 +160,6 @@ header nav menu {
     list-style: none;
     justify-content: left;
     flex-wrap: wrap;
-    font-size: 1.8rem;
     margin-top: 1.25rem;
 }
 
@@ -184,11 +183,14 @@ strong {
 
 .content-list {
     list-style: none;
-    font-size: 1.8rem;
     line-height: 2.5rem;
     margin: 0;
 }
 
+/* A lot of CSS is not applicable to <tr> elements */
+.tag-row td {
+    padding-bottom: 1rem;
+}
 
 .post-tag-list {
     list-style: none;
@@ -237,7 +239,7 @@ code, pre, pre * {
 pre {
     width: 100%;
     border: var(--standard-border);
-    font-size: .9rem;
+    font-size: var(--small-text);
 }
 
 sup {
@@ -273,7 +275,7 @@ aside {
     border: var(--standard-border);
     padding: .25rem;
     background-color: #0d3d1c;
-    font-size: .95rem;
+    font-size: var(--small-text);
 }
 
 @media screen and (min-device-width: 801px) {
@@ -296,10 +298,6 @@ aside {
 
     article {
         max-width: 75%;
-    }
-
-    figcaption {
-        font-size: var(--small-text);
     }
 
     figure img {
