--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -225,7 +225,13 @@ code, pre {
     color: var(--code-color);
     background-color: var(--secondary-background-color);
     border: none;
+    max-width: 100%;
+}
 
+/* Make long code elements fit inside their parent containers. */
+code:not(pre code) {
+    white-space: pre-wrap; /* CSS3 */
+    word-wrap: break-word;
 }
 
 code, pre, pre * {
