--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,18 +6,18 @@
 
 
     --primary-color: #ccc;
-    --secondary-color: #888;
+    --secondary-color: #ddd;
     --primary-background-color: #0a0a0a;
     --secondary-background-color: #2a2a2a;
     --link-color: #fff;
-    --hover-color: #ff69ff;
-    --code-color: #77ff77;
+    --accent-color: #7fff00;
+    --code-color: #7fff00;
     --small-text: 1.75rem;
     --title-size: 4.5rem;
     --h1-size: 3.5rem;
     --h2-size: 2.75rem;
     --standard-margin: 2rem;
-    --standard-border: 1px #aaa dotted;
+    --standard-border: 1px var(--accent-color) dotted;
     --border-style: 4px solid;
 }
 
@@ -43,11 +43,11 @@ a:not(header a):not(:hover):not(.post-tag-list *) {
 
 a:hover,
 article a:hover {
-    color: var(--hover-color);
+    color: var(--accent-color);
 }
 
 .site-title:hover {
-    border-bottom: var(--border-style) var(--hover-color);
+    border-bottom: var(--border-style) var(--accent-color);
 }
 
 .site-title a {
@@ -58,7 +58,7 @@ article a:hover {
     margin-left: -.2rem;
 }
 
-.footnotes a {
+.footnote-backref {
     text-decoration: none;
 }
 
@@ -75,15 +75,11 @@ article>* {
     margin-bottom: var(--standard-margin);
 }
 
-aside {
-    width: 100%;
-}
-
 figure {
     width: auto;
     margin-left: auto;
     margin-right: auto;
-    max-width: 33%;
+    max-width: 80%;
 }
 
 figcaption {
@@ -202,7 +198,6 @@ strong {
 
 .post-tag-list li {
     font-size: var(--small-text);
-    color: var(--secondary-color);
     margin: 0 1rem 0 0;
 }
 
@@ -226,9 +221,15 @@ footer nav {
     width: 100%;
 }
 
-code, pre {
+.footer-content table {
+    margin-top: 1rem;
+}
+
+code {
     color: var(--code-color);
-    background-color: var(--secondary-background-color);
+}
+
+code, pre {
     border: none;
     max-width: 100%;
 }
@@ -254,25 +255,27 @@ sup {
     font-size: var(--small-text);
 }
 
-blockquote p {
-    font-style: italic;
-    border-left: var(--border-style) var(--hover-color);
-    padding: .33rem .33rem .33rem .5rem;
-    background-color: var(--secondary-background-color);
-    margin-bottom: .5rem;
-}
-
 blockquote {
     width: fit-content;
     margin: 0 1rem 0 var(--standard-margin);
 }
 
-blockquote {
-    width: fit-content;
-}
-
 blockquote p code {
     font-style: normal;
+}
+
+aside, blockquote {
+    font-style: italic;
+    border-left: var(--border-style) var(--accent-color);
+    padding: .33rem .33rem .33rem .5rem;
+    background-color: var(--secondary-background-color);
+    margin-bottom: .5rem;
+}
+
+aside {
+    /*background-color: #0d3d1c;*/
+    font-size: var(--small-text);
+    line-height: 2.5rem;
 }
 
 figcaption:not(img + figcaption) {
@@ -283,12 +286,7 @@ figcaption:not(img + figcaption):before {
     content:"\2014"
 }
 
-aside {
-    border: var(--standard-border);
-    padding: .25rem;
-    background-color: #0d3d1c;
-    font-size: var(--small-text);
-}
+
 
 .tag-description {
     margin: 4rem 0 4rem 0;
@@ -312,6 +310,10 @@ aside {
 
     figure img {
         max-width: 100%;
+    }
+
+    figure {
+        max-width: 33%;
     }
 }
 
