--- a/output/assets/css/style.css
+++ b/output/assets/css/style.css
@@ -5,8 +5,8 @@
     min-height: 100vh;
 
 
-    --primary-color: #ccc;
-    --secondary-color: #ddd;
+    --primary-color: #cacaca;
+    /*--secondary-color: #ddd;*/
     --primary-background-color: #0a0a0a;
     --secondary-background-color: #2a2a2a;
     --link-color: #fff;
