Remove footer; add post metadata below title

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,9 +6,10 @@
 
 
     --primary-color: #cacaca;
-    /*--secondary-color: #ddd;*/
-    --primary-background-color: #0a0a0a;
-    --secondary-background-color: #2a2a2a;
+    --secondary-color: #aaa;
+    --primary-background-color: #1a1a1a;
+    /*--secondary-background-color: #2a2a2a;*/
+    --secondary-background-color: #000;
     --link-color: #fff;
     --accent-color: #7fff00;
     --code-color: #7fff00;
@@ -117,7 +118,7 @@ main {
 }
 
 h1 {
-    margin: 5rem 0 5rem 0;
+    margin: 5rem 0 .5rem 0;
     font-size: var(--h1-size);
     font-weight: 700;
 }
@@ -201,28 +202,18 @@ strong {
     margin: 0 1rem 0 0;
 }
 
-.footer-content {
+.post-metadata {
     font-size: var(--small-text);
+    margin-bottom: 10rem;
+    /*border: var(--standard-border);*/
+}
+
+.post-metadata * {
+    color: var(--secondary-color);
 }
 
 .table-key {
     text-align: right;
-}
-
-footer nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: var(--standard-margin);
-}
-
-.footer-content {
-    border-top: var(--border-style);
-    width: 100%;
-}
-
-.footer-content table {
-    margin-top: 1rem;
 }
 
 code {
@@ -273,9 +264,9 @@ aside, blockquote {
 }
 
 aside {
-    /*background-color: #0d3d1c;*/
-    font-size: var(--small-text);
-    line-height: 2.5rem;
+    /*font-size: var(--small-text);*/
+    line-height: 3rem;
+    /*color: var(--secondary-color);*/
 }
 
 figcaption:not(img + figcaption) {
@@ -285,8 +276,6 @@ figcaption:not(img + figcaption) {
 figcaption:not(img + figcaption):before {
     content:"\2014"
 }
-
-
 
 .tag-description {
     margin: 4rem 0 4rem 0;
