--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,8 +14,8 @@
     --accent-color: #7fff00;
     --code-color: #7fff00;
     --small-text: 1.75rem;
-    --title-size: 4.5rem;
-    --h1-size: 3.5rem;
+    --title-size: 5rem;
+    --h1-size: 4.5rem;
     --h2-size: 2.75rem;
     --standard-margin: 2rem;
     --standard-border: 1px var(--accent-color) dotted;
@@ -80,7 +80,7 @@ figure {
     width: auto;
     margin-left: auto;
     margin-right: auto;
-    max-width: 80%;
+    max-width: 100%;
 }
 
 figcaption {
@@ -90,9 +90,10 @@ figcaption {
 
 figure img {
     max-width: 100%;
-    width: 100%;
+    width: 75%;
     object-fit: fill;
     image-rendering: optimizeSpeed;
+    display: block;
     margin-left: auto;
     margin-right: auto;
 }
@@ -246,27 +247,25 @@ sup {
     font-size: var(--small-text);
 }
 
-blockquote {
-    width: fit-content;
-    margin: 0 1rem 0 var(--standard-margin);
-}
-
 blockquote p code {
     font-style: normal;
 }
 
+.blockquote {
+    width: 100%;
+}
+
 aside, blockquote {
+    width: 100%;
     font-style: italic;
     border-left: var(--border-style) var(--accent-color);
-    padding: .33rem .33rem .33rem .5rem;
+    padding: 1rem .5rem 1rem 1.5rem;
     background-color: var(--secondary-background-color);
-    margin-bottom: .5rem;
 }
 
 aside {
-    /*font-size: var(--small-text);*/
     line-height: 3rem;
-    /*color: var(--secondary-color);*/
+    margin-bottom: 3rem;
 }
 
 figcaption:not(img + figcaption) {
@@ -284,8 +283,8 @@ figcaption:not(img + figcaption):before {
 @media screen and (min-device-width: 801px) {
     :root {
         font-size: 10px;
-        --title-size: 7.5rem;
-        --h1-size: 6rem;
+        --title-size: 8rem;
+        --h1-size: 7rem;
         --h2-size: 4rem;
     }
 
@@ -298,11 +297,7 @@ figcaption:not(img + figcaption):before {
     }
 
     figure img {
-        max-width: 100%;
-    }
-
-    figure {
-        max-width: 33%;
+        max-width: 40%;
     }
 }
 
