--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12,7 +12,6 @@
     --secondary-background-color: #000;
     --link-color: #fff;
     --accent-color: #7fff00;
-    --code-color: #7fff00;
     --small-text: 1.75rem;
     --title-size: 5rem;
     --h1-size: 4.5rem;
@@ -43,7 +42,8 @@ a:not(header a):not(:hover):not(.post-tag-list *) {
 }
 
 a:hover,
-article a:hover {
+article a:hover,
+#toc a:hover {
     color: var(--accent-color);
 }
 
@@ -125,9 +125,9 @@ h1 {
 }
 
 h2 {
-    margin: 4rem 0 4rem 0;
     font-size: var(--h2-size);
     font-weight: 700;
+    margin: 4rem 0 4rem 0;
 }
 
 li:not(nav menu li, .content-list li) {
@@ -218,7 +218,7 @@ strong {
 }
 
 code {
-    color: var(--code-color);
+    color: var(--accent-color);
 }
 
 code, pre {
@@ -284,7 +284,7 @@ figcaption:not(img + figcaption):before {
     :root {
         font-size: 10px;
         --title-size: 8rem;
-        --h1-size: 7rem;
+        /*--h1-size: 7rem;*/
         --h2-size: 4rem;
     }
 
@@ -300,6 +300,35 @@ figcaption:not(img + figcaption):before {
         max-width: 40%;
     }
 }
+
+/*#toc {*/
+/*    margin-bottom: 10rem;*/
+/*}*/
+
+/*#toc p {*/
+/*    margin-bottom: 2rem;*/
+/*}*/
+
+/*#toc a {*/
+/*    color: var(--primary-color);*/
+/*}*/
+
+/*#toc-toggle {*/
+/*    cursor: pointer;*/
+/*    background-color: var(--primary-background-color);*/
+/*    border: none;*/
+/*    font-size: 24px;*/
+/*    display: inline-block;*/
+/*    margin-bottom: .75rem;*/
+/*}*/
+
+/*#toc-toggle span {*/
+/*    color: var(--accent-color);*/
+/*}*/
+
+/*#toc-list li {*/
+/*    margin-bottom: .25rem;*/
+/*}*/
 
 /* JetBrains font face */
 
