Make background color darker

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,9 +5,9 @@
     min-height: 100vh;
 
 
-    --primary-color: #cacaca;
+    --primary-color: #ccc;
     --secondary-color: #aaa;
-    --primary-background-color: #1a1a1a;
+    --primary-background-color: #0a0a0a;
     /*--secondary-background-color: #2a2a2a;*/
     --secondary-background-color: #000;
     --link-color: #fff;
