--- a/output/assets/css/style.css
+++ b/output/assets/css/style.css
@@ -1,13 +1,13 @@
 :root {
 
     /* Hard set to use for subsequent rem sizing. */
-    font-size: 24px;
+    /*font-size: 24px;*/
     min-height: 100vh;
 
 
-    --primary-color: #cacaca;
+    --primary-color: #ccc;
     --secondary-color: #aaa;
-    --primary-background-color: #1a1a1a;
+    --primary-background-color: #0a0a0a;
     /*--secondary-background-color: #2a2a2a;*/
     --secondary-background-color: #000;
     --link-color: #fff;
@@ -22,14 +22,17 @@
 }
 
 * {
-    font-weight: 400;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     color: var(--primary-color);
+}
 
+/* Set in body to prevent from overriding MathJax */
+body {
     /* I prefer Helvetica, but it is proprietary and has limited font weights available OOB. */
     font-family: Arial, "Noto Sans JP", sans-serif, "Fira-Sans", Roboto, Helvetica, sans-serif;
+    font-weight: 400;
 }
 
 article a:not(.content-list a) {
@@ -86,6 +89,7 @@ figure {
 figcaption {
     text-align: center;
     font-size: var(--small-text);
+    margin-top: .5rem;
 }
 
 figure img {
