--- a/output/assets/css/style.css
+++ b/output/assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
     /* Hard set to use for subsequent rem sizing. */
-    /*font-size: 24px;*/
+    font-size: 24px;
     min-height: 100vh;
 
 
