--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -19,11 +19,16 @@
         @apply hover:text-[#7fff00] text-stone-200 underline font-bold;
     }
 
-    strong, h1, h2, li::marker {
+    strong,
+    h1,
+    h2,
+    li::marker {
         @apply text-stone-200;
     }
 
-    pre, blockquote, aside {
+    pre,
+    blockquote,
+    aside {
         @apply bg-zinc-800 my-3 rounded;
     }
 
@@ -31,7 +36,8 @@
         @apply bg-zinc-800;
     }
 
-    blockquote, aside {
+    blockquote,
+    aside {
         @apply border-l-4 border-solid border-[#7fff00] text-center p-1 text-stone-200;
     }
 
@@ -43,8 +49,13 @@
         @apply list-decimal;
     }
 
-    ul, ol {
+    ul,
+    ol {
         @apply pl-4 list-inside;
+    }
+
+    li::marker {
+        @apply font-bold;
     }
 
     figure {
@@ -52,7 +63,7 @@
     }
 
     img {
-        @apply mx-auto block rounded-sm w-full h-auto lg:w-1/2 xl:w-1/3;
+        @apply max-w-[520px] mx-auto w-full block rounded-sm h-auto md:w-1/2;
     }
 
     figcaption {
@@ -68,27 +79,26 @@
     content:"\2014"
 }
 
-li::marker {
-    font-weight: bold;
-}
-
 .footnote-backref,
 .reference-backref,
 .reference-ref {
     text-decoration: none;
 }
 
+/* Stupid Parsedown inserts a <p> in each <li> the footnotes section. */
 .footnotes p {
     display: inline;
+}
+
+/* Stupid Parsedown inserts a <hr> the footnotes section. */
+.footnotes hr {
+    display: none;
 }
 
 .footnotes ol li {
     margin-bottom: 1rem;
 }
 
-hr {
-    display: none;
-}
-
+/* Loading github-dark.min.css directly here to more easily re-use colors, etc. */
 pre code.hljs {display:block;overflow-x:auto;padding:.5rem}code.hljs{padding:0}
-.hljs{color:#c9d1d9;background:var(--secondary-background-color)}.hljs-doctag,.hljs-keyword,.hljs-meta .hljs-keyword,.hljs-template-tag,.hljs-template-variable,.hljs-type,.hljs-variable.language_{color:#ff7b72}.hljs-title,.hljs-title.class_,.hljs-title.class_.inherited__,.hljs-title.function_{color:#d2a8ff}.hljs-attr,.hljs-attribute,.hljs-literal,.hljs-meta,.hljs-number,.hljs-operator,.hljs-selector-attr,.hljs-selector-class,.hljs-selector-id,.hljs-variable{color:#79c0ff}.hljs-meta .hljs-string,.hljs-regexp,.hljs-string{color:#a5d6ff}.hljs-built_in,.hljs-symbol{color:#ffa657}.hljs-code,.hljs-comment,.hljs-formula{color:#8b949e}.hljs-name,.hljs-quote,.hljs-selector-pseudo,.hljs-selector-tag{color:#7ee787}.hljs-subst{color:#c9d1d9}.hljs-section{color:#1f6feb;font-weight:700}.hljs-bullet{color:#f2cc60}.hljs-emphasis{color:#c9d1d9;font-style:italic}.hljs-strong{color:#c9d1d9;font-weight:700}.hljs-addition{color:#aff5b4;background-color:#033a16}.hljs-deletion{color:#ffdcd7;background-color:#67060c}
+.hljs{color:#c9d1d9;}.hljs-doctag,.hljs-keyword,.hljs-meta .hljs-keyword,.hljs-template-tag,.hljs-template-variable,.hljs-type,.hljs-variable.language_{color:#ff7b72}.hljs-title,.hljs-title.class_,.hljs-title.class_.inherited__,.hljs-title.function_{color:#d2a8ff}.hljs-attr,.hljs-attribute,.hljs-literal,.hljs-meta,.hljs-number,.hljs-operator,.hljs-selector-attr,.hljs-selector-class,.hljs-selector-id,.hljs-variable{color:#79c0ff}.hljs-meta .hljs-string,.hljs-regexp,.hljs-string{color:#a5d6ff}.hljs-built_in,.hljs-symbol{color:#ffa657}.hljs-code,.hljs-comment,.hljs-formula{color:#8b949e}.hljs-name,.hljs-quote,.hljs-selector-pseudo,.hljs-selector-tag{color:#7ee787}.hljs-subst{color:#c9d1d9}.hljs-section{color:#1f6feb;font-weight:700}.hljs-bullet{color:#f2cc60}.hljs-emphasis{color:#c9d1d9;font-style:italic}.hljs-strong{color:#c9d1d9;font-weight:700}.hljs-addition{color:#aff5b4;background-color:#033a16}.hljs-deletion{color:#ffdcd7;background-color:#67060c}
