--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -3,20 +3,16 @@
 @tailwind utilities;
 
 @layer base {
+    a {
+        @apply text-[#7fff00] hover:text-[#ccff00] underline;
+    }
+
     h2 {
-        @apply lg:text-2xl text-xl font-bold my-6;
+        @apply text-xl font-bold my-6 lg:text-2xl;
     }
 
     p {
         @apply my-2;
-    }
-
-    code {
-        @apply text-[#7fff00];
-    }
-
-    a {
-        @apply hover:text-[#7fff00] text-stone-200 underline font-bold;
     }
 
     strong,
@@ -33,7 +29,7 @@
     }
 
     code {
-        @apply bg-zinc-800;
+        @apply bg-zinc-800 text-stone-200;
     }
 
     blockquote,
