Build: 85e2198 Set bg color 0a0a0a

--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -37,6 +37,10 @@
         @apply border-l-4 border-solid border-chartreuse p-4 text-stone-200;
     }
 
+    blockquote {
+        @apply italic;
+    }
+
     ul {
         @apply list-disc;
     }
