--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -99,6 +99,22 @@
     figcaption {
         @apply text-[#999999] text-center text-sm;
     }
+
+    sup {
+        @apply text-base;
+        vertical-align: baseline;
+        position: relative;
+        top: 0;
+        margin-left: 0.2em;
+    }
+
+    sup > a:before {
+        content: "[";
+    }
+
+    sup > a:after {
+        content: "]";
+    }
 }
 
 /*a:hover {*/
