--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -62,6 +62,10 @@
         @apply bg-[#222222] font-monospace;
     }
 
+    code {
+        font-family: 'JetBrainsMono', monospace;
+    }
+
     blockquote,
     aside {
         @apply border-l-4 border-solid border-[#3366FF] p-4 text-[#ffffff];
@@ -115,6 +119,19 @@
     sup > a:after {
         content: "]";
     }
+
+    ruby {
+        display: ruby;
+    }
+
+    /* Firefox-specific adjustment */
+    @-moz-document url-prefix() {
+        rt {
+            position: relative;
+            top: 1em;
+            margin-left: -2em;
+        }
+    }
 }
 
 /*a:hover {*/
@@ -154,6 +171,20 @@
     src:  url('/assets/fonts/HanSerif-Regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
+}
+
+@font-face {
+    font-family: 'JetBrainsMono';
+    src:  url('/assets/fonts/JetBrainsMono-Medium.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'JetBrainsMono';
+    src:  url('/assets/fonts/JetBrainsMono-MediumItalic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
 }
 
 /* Loading github-dark.min.css directly here to more easily re-use colors, etc. */
