--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -12,7 +12,7 @@
     }
 
     a:hover {
-        @apply transition duration-300 ease-in-out text-[#3399FF];
+        @apply transition duration-500 ease-in-out text-[#33CCFF];
     }
 
     h1 > a,
@@ -39,8 +39,9 @@
 
     strong,
     em:not(h2 em):not(figcaption em),
-    li::marker {
-        @apply text-[#3399FF];
+    li::marker,
+    code:not(pre > code){
+        @apply text-[#ffffff];
     }
 
     pre,
@@ -119,6 +120,10 @@
 
     sup > a:after {
         content: "]";
+    }
+
+    sup > a {
+        @apply no-underline;
     }
 
     ruby {
