--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -4,7 +4,7 @@
 
 @layer base {
     a:not(header > a):not(h2 > a):not(h3 > a):not(h4 > a) {
-        @apply text-[#3366FF];
+        @apply text-[#4477FF];
     }
 
     a {
@@ -19,7 +19,7 @@
     h2 > a,
     h3 > a,
     h4 > a {
-        @apply text-[#ffffff] no-underline font-bold;
+        @apply text-[#ffffff] no-underline hover:underline font-bold;
     }
 
     h1,
@@ -176,6 +176,15 @@
     src:  url('/assets/fonts/HanSerif-Regular-subset.woff') format('woff'),
           url('/assets/fonts/HanSerif-Regular-subset.woff2') format('woff2');
     font-weight: normal;
+    font-style: normal;
+}
+
+/**/
+
+@font-face {
+    font-family: 'Inter';
+    src:  url('/assets/fonts/Inter-VariableFont_slnt,wght.ttf') format('truetype-variations');
+    font-weight: 100 900;
     font-style: normal;
 }
 
