--- a/public/assets/css/input.css
+++ b/public/assets/css/input.css
@@ -28,11 +28,11 @@
     }
 
     h2 {
-        @apply text-lg md:text-2xl;
+        @apply text-xl md:text-2xl;
     }
 
     h3 {
-        @apply text-base font-bold md:text-xl;
+        @apply text-lg font-bold md:text-xl;
     }
 
     p {
@@ -61,11 +61,10 @@
     }
 
     code:not(pre > code) {
-        @apply bg-[#333333];
+        @apply bg-[#444444] overflow-x-auto whitespace-pre-wrap break-words;
     }
 
     code {
-        @apply overflow-x-auto whitespace-pre-wrap break-words;
         font-family: 'JetBrainsMono', monospace;
     }
 
